add intersection kernel